lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
spec:
  rules:
    - host: localhost-eldaroru.com
      http:
        paths:
          - backend:
              service:
                name: lab3-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - localhost-eldaroru.com
      secretName: my-secret
